2014-02-04  Charlie Zender  <zender@uci.edu>

	* Add byte/ubyte-valued nco_var_avg_rdc_ttl()/_min()/max()
	Was bug in native-byte arithmetic but NCO usually promotes to double...

	* Fix Clang/LLVM compiler warnings: nco_fl_blocksize() and nco_cnk_ini() prototypes,
	self-assign CEWI compiler warnings (now add zero).

2014-02-04  Pedro Vicente  <pvicente@uci.edu>

        * Add ncks regression #89 -X writing and associated coordinates

2014-02-02  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #88 -X writing and associated coordinates

2014-02-01  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regression #83 Test 'standard_name' attribute for "longitude" and "latitude" values

2014-01-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.2 release procedure:
 	Changes since nco-4_4_1: fxm
	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1

	* Crude implementation of cnk_map=rew

2014-01-31  Pedro Vicente  <pvicente@uci.edu>

	* nco_cnv_cf_cll_mth_add() Add cell_methods attributes (create mode)

	* Add ncwa regression #58 Add cell_methods attributes (create mode)

2014-01-30  Pedro Vicente  <pvicente@uci.edu>

	* nco_chk_dmn(): Check valid input dimension name (used for --fix_rec_dmn)
	Make group table construction function return NCO_CHK_NOERR or NCO_CHK_ERR

2014-01-30  Charlie Zender  <zender@uci.edu>

	* Improve REC_APN documentation

2014-01-29  Pedro Vicente  <pvicente@uci.edu>

	* Add ncks regressions #86 Change record dimension to fixed dimension --fix_rec_dmn

2014-01-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.1 release procedure:
 	Changes since nco-4_4_0: -X grp, cnk_dmn grp, ncra_no_fl_close bugfix
	cd ~/nco;cvs tag -d nco-4_4_1;cvs tag -d nco-4_4_1-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.1 release"
	cvs tag -c nco-4_4_1;cvs tag -c nco-4_4_1-1

	* Verified ./configure works on Intel compilers on greenplanet, and